# Ubik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  contributors.txt  test.tiff
cmake/: FindEmbree.cmake  FindOpenEXR.cmake  FindSDL2.cmake  externalpackages.cmake
include/: ctpl.h
src/: bucket.cpp  bucket.hpp  color.hpp  displaydriver.cpp  displaydriver.hpp  exrdriver.cpp  exrdriver.hpp  interactiverenderer.cpp  interactiverenderer.hpp  logging.cpp  logging.hpp  main.cpp  memory.cpp  memory.hpp  options.cpp  options.hpp  outputdriver.hpp  radiance.hpp  renderer.cpp  renderer.hpp  rng.cpp  rng.hpp  scene.hpp  signal.cpp  signal.hpp  task.cpp  task.hpp  tiledrenderer.cpp  tiledrenderer.hpp  vector.cpp  vector.hpp
src/camera/: camera.cpp  camera.hpp  perspectivecamera.cpp  perspectivecamera.hpp
src/driver/: displaydriver.cpp  displaydriver.hpp  exrdriver.cpp  exrdriver.hpp  outputdriver.cpp  outputdriver.hpp
src/integrator/: imagerender.cpp  imagerender.hpp  integrator.cpp  integrator.hpp  pathtracer.cpp  pathtracer.hpp  smallpt.cpp  smallpt.hpp
src/primitive/: primitive.cpp  primitive.hpp
src/renderer/: bucket.cpp  bucket.hpp  interactiverenderer.cpp  interactiverenderer.hpp  renderer.cpp  renderer.hpp  tiledrenderer.cpp  tiledrenderer.hpp
src/sampler/: adaptativesampler.cpp  adaptativesampler.hpp  fixedsampler.cpp  fixedsampler.hpp  sampler.cpp  sampler.hpp
src/scene/: scene.cpp  scene.hpp
src/utils/: arrayiterator.cpp  arrayiterator.hpp
wip_tests/: arrayiterator.cpp  arrayiterator.py
